Fixed grid overflow issue

--- a/styles.css
+++ b/styles.css
@@ -3,11 +3,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
 body {
     font-family: 'Roboto',sans-serif;
-    /* background-color: #d1141a; */
+    background-color: #d1141a;
 }
 .button-container {
     display: flex;
     justify-content: center;
+    gap: 20px;
+    margin-top: 25px;
 }
 
 .title {
@@ -15,17 +17,23 @@ body {
     color: rgb(218, 185, 1);
     font-size: 30px;
     text-align: center;
+    cursor: pointer;
+}
+
+.title-container {
+    display: flex;
+    justify-content: center;
 }
 
 .dimButton {
     display: flex;
-    background-color: #2F6690;
-    color: #faf7f7;
+    background-color: #d1141a;
+    color: rgb(218, 185, 1);
     padding: 8px 16px;
-    border: 2px solid #2F6690;
+    border: 2px solid rgb(218, 185, 1);
     border-radius: 10px;
     font-weight: 700;
-    margin-top: 25px;
+    cursor: pointer;
 }
 
 .grid-container {
@@ -33,19 +41,19 @@ body {
     /* flex-direction: column; */
     width: 960px;
     height: 960px;
+    padding: 10px;
     /* gap: 1px; */
     margin: auto;
+    margin-bottom: 15px;
     flex-wrap: wrap;
 }
 
 .row > *{
     display: flex;
     flex: 1;
-    background-color: #aca9a9;
-    border: 2px solid aquamarine;
+    background-color: #868686;
+    border: 2px solid #faf7f7;
     border-radius: 10px;
-    width: auto;
-    padding-top: 100%;
 }
 
 .hover {
